<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="180dp"
    android:layout_marginTop="180dp"
    android:background="@drawable/comic_shape_dialog_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/base_remind"
        android:textColor="@color/base_333333"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_sign_success_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_remind"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/base_sign_des"
        android:textColor="@color/base_color_999999"
        android:textSize="14dp" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_no_more"
        style="@style/base_style_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_sign_success_des"
        android:layout_centerHorizontal="true"
        android:shadowColor="@color/base_yellow_ffd850"
        android:text="@string/base_delete_comment_no_more_remind"
        android:textColor="@color/base_color_999999" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@id/dialog_sign_confirm"
        android:background="@color/base_color_999999" />


    <TextView
        android:id="@+id/dialog_sign_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/base_confirm"
        android:textColor="@color/base_yellow_ffd850"
        android:textSize="16dp"
        android:textStyle="bold" />

</RelativeLayout>