<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_280"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/base_bg_delete_dialog_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/base_delete_comment"
        android:textColor="@color/base_color_363636"
        android:textSize="@dimen/dp_18"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/delete_dialog_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_22"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/base_delete_comment_content"
        android:textColor="@color/base_color_666666"
        android:textSize="@dimen/dp_15" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_no_more"
        style="@style/base_style_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/delete_dialog_msg"
        android:layout_centerHorizontal="true"
        android:shadowColor="@color/base_yellow_ffd850"
        android:text="@string/base_delete_comment_no_more_remind"
        android:textColor="#999999" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/base_color_dddddd"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_no_more"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/delete_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_60"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/base_cancel"
            android:textColor="@color/base_color_999999"
            android:textSize="@dimen/dp_18" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/base_color_dddddd"></View>

        <TextView
            android:id="@+id/delete_dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_60"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/base_confirm"
            android:textColor="@color/base_color_ffd850"
            android:textSize="@dimen/dp_18" />
    </LinearLayout>
</RelativeLayout>