<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_280"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/base_bg_delete_dialog_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/base_pay_confirm"
        android:textColor="@color/base_color_6175c6"
        android:textSize="@dimen/dp_18"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_weight="1"
        android:gravity="center|left"
        android:textColor="@color/base_color_989898"
        android:textSize="@dimen/dp_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/base_color_dddddd"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/delete_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/base_cancel"
            android:textColor="@color/base_color_666666"
            android:textSize="@dimen/dp_16" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/base_color_dddddd"></View>

        <TextView
            android:id="@+id/delete_dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/base_confirm"
            android:textColor="@color/base_color_6175c6"
            android:textSize="@dimen/dp_16" />
    </LinearLayout>
</LinearLayout>